--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,26 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.github.dcendents.android-maven'
 
+group='com.github.jonecx'
+
+buildscript {
+    repositories {
+        /*maven {
+            url 'https://maven.google.com'
+        }*/
+        google()
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
+    }
+
+}
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -18,4 +37,9 @@ android {
             minifyEnabled false
         }
     }
+}
+
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.72"
 }
